# voiceFlow.ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INITIAL.md  Makefile  README.md  SECURITY.md  alembic.ini  billing_service.py  demo-widget.html  docker-compose.addon.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt  run.sh
.claude/commands/: build-fix.md  build-marketing-page.md  code-review.md  compliance-review.md  e2e.md  execute-prp.md  generate-mobile-flutter.md  generate-mobile-rn.md  generate-prp.md  learn.md  mobile-review.md  new-client.md  onboard-repo.md  plan.md  resume.md  tdd.md  (+3 more)
.github/: pull_request_template.md
docs/: DEPLOYMENT.md
frontend/: .cachebust  .eslintrc.json  .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
hooks/: hooks.json
migrations/: 005_voice_library_gpu_safe.sql  006_wallet_schema.sql  007_tenant_business_profile.sql  008_leads_database.sql  env.py
moshi_finetune/: train.py
n8n/: 01_book_appointment.json  02_send_whatsapp.json  03_check_availability.json  04_update_crm.json  05_send_payment_link.json  06_send_sms.json  07_moshi_weekly_finetune.json  README.md
resources/: README.md
scripts/: README.md  _gen_migration.py  benchmark_accuracy.py  download_indicvoices.py  gpu_auto_shutdown.py  new-client.sh
tests/: conftest.py  test_auth_service.py  test_eos.py  test_noise_reduction.py  test_telephony.py  test_vad.py
(+345 files in other folders)
